--- a/tex_files/bib-refs.bib
+++ b/tex_files/bib-refs.bib
@@ -977,3 +977,206 @@ outbreak in Germany},
   year={1950},
   publisher={JSTOR}
 }
+
+@article{guan2020clinical,
+  title={Clinical characteristics of coronavirus disease 2019 in China},
+  author={Guan, Wei-jie and Ni, Zheng-yi and Hu, Yu and Liang, Wen-hua and Ou, Chun-quan and He, Jian-xing and Liu, Lei and Shan, Hong and Lei, Chun-liang and Hui, David SC and others},
+  journal={New England journal of medicine},
+  volume={382},
+  number={18},
+  pages={1708--1720},
+  year={2020},
+  publisher={Mass Medical Soc}
+}
+
+@article{chen2020distribution,
+  title={Distribution of the COVID-19 epidemic and correlation with population emigration from Wuhan, China},
+  author={Chen, Ze-Liang and Zhang, Qi and Lu, Yi and Guo, Zhong-Min and Zhang, Xi and Zhang, Wen-Jun and Guo, Cheng and Liao, Cong-Hui and Li, Qian-Lin and Han, Xiao-Hu and others},
+  journal={Chinese medical journal},
+  year={2020},
+  publisher={Wolters Kluwer Health}
+}
+
+@article{saha2020monitoring,
+  title={Monitoring and epidemiological trends of coronavirus disease (COVID-19) around the world},
+  author={Saha, Arnab and Gupta, Komal and Patil, Manti and others},
+  journal={Matrix Science Medica},
+  volume={4},
+  number={4},
+  pages={121},
+  year={2020},
+  publisher={Medknow Publications}
+}
+
+@article{gross2020spatio,
+  title={Spatio-temporal propagation of COVID-19 pandemics},
+  author={Gross, Bnaya and Zheng, Zhiguo and Liu, Shiyan and Chen, Xiaoqi and Sela, Alon and Li, Jianxin and Li, Daqing and Havlin, Shlomo},
+  journal={EPL (Europhysics Letters)},
+  volume={131},
+  number={5},
+  pages={58003},
+  year={2020},
+  publisher={IOP Publishing}
+}
+
+@article{gianquintieri2020mapping,
+  title={Mapping Spatiotemporal Diffusion of COVID-19 in Lombardy (Italy) on the Base of Emergency Medical Services Activities},
+  author={Gianquintieri, Lorenzo and Brovelli, Maria Antonia and Pagliosa, Andrea and Dassi, Gabriele and Brambilla, Piero Maria and Bonora, Rodolfo and Sechi, Giuseppe Maria and Caiani, Enrico Gianluca},
+  journal={ISPRS International Journal of Geo-Information},
+  volume={9},
+  number={11},
+  pages={639},
+  year={2020},
+  publisher={Multidisciplinary Digital Publishing Institute}
+}
+
+@article{chen2021spatio,
+  title={Spatio-temporal distribution characteristics and influencing factors of COVID-19 in China},
+  author={Chen, Youliang and Li, Qun and Karimian, Hamed and Chen, Xunjun and Li, Xiaoming},
+  journal={Scientific Reports},
+  volume={11},
+  number={1},
+  pages={1--12},
+  year={2021},
+  publisher={Nature Publishing Group}
+}
+
+@article{petrov2020spatiotemporal,
+  title={Spatiotemporal dynamics of the COVID-19 pandemic in the arctic: early data and emerging trends},
+  author={Petrov, Andrey N and Welford, Mark and Golosov, Nikolay and DeGroote, John and Degai, Tatiana and Savelyev, Alexander},
+  journal={International Journal of Circumpolar Health},
+  volume={79},
+  number={1},
+  pages={1835251},
+  year={2020},
+  publisher={Taylor \& Francis}
+}
+
+@article{xiong2020spatial,
+  title={Spatial statistics and influencing factors of the novel coronavirus pneumonia 2019 epidemic in Hubei Province, China},
+  author={Xiong, Yongzhu and Wang, Yunpeng and Chen, Feng and Zhu, Mingyong},
+  year={2020}
+}
+
+@article{ahmadi2020investigation,
+  title={Investigation of effective climatology parameters on COVID-19 outbreak in Iran},
+  author={Ahmadi, Mohsen and Sharifi, Abbas and Dorosti, Shadi and Ghoushchi, Saeid Jafarzadeh and Ghanbari, Negar},
+  journal={Science of the Total Environment},
+  volume={729},
+  pages={138705},
+  year={2020},
+  publisher={Elsevier}
+}
+
+@article{mehmood2021spatiotemporal,
+  title={Spatiotemporal variability of COVID-19 pandemic in relation to air pollution, climate and socioeconomic factors in Pakistan},
+  author={Mehmood, Khalid and Bao, Yansong and Abrar, Muhammad Mohsin and Petropoulos, George P and Soban, Ahmad and Saud, Shah and Khan, Zalan Alam and Khan, Shah Masud and Fahad, Shah and others},
+  journal={Chemosphere},
+  volume={271},
+  pages={129584},
+  year={2021},
+  publisher={Elsevier}
+}
+
+@article{pedrosa2020dynamics,
+  title={The dynamics of Covid-19: weather, demographics and infection timeline},
+  author={Pedrosa, Renato HL},
+  journal={MedRxiv},
+  year={2020},
+  publisher={Cold Spring Harbor Laboratory Press}
+}
+
+@article{mollalo2020gis,
+  title={GIS-based spatial modeling of COVID-19 incidence rate in the continental United States},
+  author={Mollalo, Abolfazl and Vahedi, Behzad and Rivera, Kiara M},
+  journal={Science of the total environment},
+  volume={728},
+  pages={138884},
+  year={2020},
+  publisher={Elsevier}
+}
+
+@article{maiti2021exploring,
+  title={Exploring spatiotemporal effects of the driving factors on COVID-19 incidences in the contiguous United States},
+  author={Maiti, Arabinda and Zhang, Qi and Sannigrahi, Srikanta and Pramanik, Suvamoy and Chakraborti, Suman and Cerda, Artemi and Pilla, Francesco},
+  journal={Sustainable cities and society},
+  volume={68},
+  pages={102784},
+  year={2021},
+  publisher={Elsevier}
+}
+
+@article{wang2021spatiotemporal,
+  title={Spatiotemporal characteristics of the COVID-19 epidemic in the United States},
+  author={Wang, Yun and Liu, Ying and Struthers, James and Lian, Min},
+  journal={Clinical infectious diseases},
+  volume={72},
+  number={4},
+  pages={643--651},
+  year={2021},
+  publisher={Oxford University Press US}
+}
+
+@article{allcott2020polarization,
+  title={Polarization and public health: Partisan differences in social distancing during the coronavirus pandemic},
+  author={Allcott, Hunt and Boxell, Levi and Conway, Jacob and Gentzkow, Matthew and Thaler, Michael and Yang, David},
+  journal={Journal of Public Economics},
+  volume={191},
+  pages={104254},
+  year={2020},
+  publisher={Elsevier}
+}
+
+@article{castro2021spatiotemporal,
+  title={Spatiotemporal pattern of COVID-19 spread in Brazil},
+  author={Castro, Marcia C and Kim, Sun and Barberia, Lorena and Ribeiro, Ana Freitas and Gurzenda, Susie and Ribeiro, Karina Braga and Abbott, Erin and Blossom, Jeffrey and Rache, Beatriz and Singer, Burton H},
+  journal={Science},
+  year={2021},
+  publisher={American Association for the Advancement of Science}
+}
+
+@article{bermudi2021spatiotemporal,
+  title={Spatiotemporal ecological study of COVID-19 mortality in the city of S{\~a}o Paulo, Brazil: shifting of the high mortality risk from areas with the best to those with the worst socio-economic conditions},
+  author={Bermudi, Patricia Marques Moralejo and Lorenz, Camila and de Aguiar, Breno Souza and Failla, Marcelo Antunes and Barrozo, Ligia Vizeu and Chiaravalloti-Neto, Francisco},
+  journal={Travel medicine and infectious disease},
+  volume={39},
+  pages={101945},
+  year={2021},
+  publisher={Elsevier}
+}
+
+@article{orea2020effective,
+  title={How effective has the Spanish lockdown been to battle COVID-19? A spatial analysis of the coronavirus propagation across provinces},
+  author={Orea, Luis and {\'A}lvarez, Inmaculada C},
+  journal={Documento de trabajo},
+  volume={3},
+  pages={1--33},
+  year={2020}
+}
+
+@article{kasilingam2020exploring,
+  title={Exploring the growth of COVID-19 cases using exponential modelling across 42 countries and predicting signs of early containment using machine learning},
+  author={Kasilingam, Dharun and Sathiya Prabhakaran, Sakthivel Puvaneswaran and Rajendran, Dinesh Kumar and Rajagopal, Varthini and Santhosh Kumar, Thangaraj and Soundararaj, Ajitha},
+  journal={Transboundary and Emerging Diseases},
+  year={2020},
+  publisher={Wiley Online Library}
+}
+
+@article{nandy2021managing,
+  title={Managing the COVID-19 pandemic: does social infrastructure matter? Evidence from India},
+  author={Nandy, Amarendu and Tiwari, Chhavi and Kundu, Sayantan},
+  journal={Transforming Government: People, Process and Policy},
+  year={2021},
+  publisher={Emerald Publishing Limited}
+}
+
+@article{sannigrahi2020examining,
+  title={Examining the association between socio-demographic composition and COVID-19 fatalities in the European region using spatial regression approach},
+  author={Sannigrahi, Srikanta and Pilla, Francesco and Basu, Bidroha and Basu, Arunima Sarkar and Molter, Anna},
+  journal={Sustainable cities and society},
+  volume={62},
+  pages={102418},
+  year={2020},
+  publisher={Elsevier}
+}
+
