--- a/tex_files/chapter-coronavirus.tex
+++ b/tex_files/chapter-coronavirus.tex
@@ -6,7 +6,7 @@ Viral diseases continue to pose a serious public health threat. Several viral ep
 In late 2019, the first few cases of lower respiratory infections were detected in Wuhan, China. In February 2020, this viral disease was officially named "Covid-19", an acronym for "Coronavirus Disease 2019". \\
 Due to the rapid spread of the virus, a Public Health Emergency of International Concern was declared at the end of January 2020, with 18 countries reporting cases and four countries reporting human-to-human transmission. \\
 At the end of February 2020, the World Health Organisation (WHO) raised the risk of a Covid 19 epidemic to "very high" before declaring it a pandemic on 11 March. At that time, more than 118,000 cases in 114 countries and 4000 deaths had already been registered. \\
-The first cases of the disease were linked to direct exposure at the Huanan Seafood Wholesale Market in Wuhan, with animal-to-human transmission suspected as the main mechanism. After subsequent cases could not be linked to this mechanism, human-to-human transmission was presumed to be the main transmission mechanism. Furthermore, sympotomatic individuals are thought to be the most common source of covid-19 spread. However, asymptomatic individuals can also transmit the virus, therefore isolation is the best way to contain this epidemic. \\
+The first cases of the disease were linked to direct exposure at the Huanan Seafood Wholesale Market in Wuhan, with animal-to-human transmission suspected as the main mechanism. After subsequent cases could not be linked to this mechanism, human-to-human transmission was presumed to be the main transmission mechanism. Furthermore, sympotomatic individuals are thought to be the most common source of Covid-19 spread. However, asymptomatic individuals can also transmit the virus, therefore isolation is the best way to contain this epidemic. \\
 Similar to other respiratory diseases, e.g. influenza, transmission is thought to occur through respiratory droplets (particles $>5-10\mu m$ in diameter) when coughing and sneezing. In closed rooms, transmission by aerosol is also possible. \\
 Based on the data from the first cases in Wuhan, the incubation period is generally between 3 and 7 days, with a median of 5.1 days. According to the data, the number of infections doubled about every seven days and the basic reproductive number $R$ is 2.2, which means that on average each infected individual infects another 2.2 individuals. \\
 According to a report by the Chinese Centre for Disease Control, which studied 72,314 cases, the overall mortality rate of confirmed cases was 2.3\%, with most of the fatal cases affecting people over 70 years of age. \\
