--- a/tex_files/chapter-datacollection.tex
+++ b/tex_files/chapter-datacollection.tex
@@ -40,6 +40,7 @@ LK Rosenheim & 2020-03-10 & 6 & 260983 \\
 \bottomrule
 \end{tabular}
 \end{table}
+\clearpage
 \section{Vaccination Data}
 At the end of 2020, the first countries began vaccinating against Covid-19. Vaccination leads to a milder course of the disease, but it is not yet known whether vaccinated people can continue to transmit Covid-19, as of early May 2021. By including the proportion of people vaccinated, one can give an indication of the extent to which vaccination helps prevent the spread of Covid-19. These data are available for Norway at the municipality level via the statistics database of the National Institute of Health, FHI \autocite[][]{fhi}. For Germany, these data are only available at the state level and are therefore not used.
 \clearpage
